[package]
name = "wordcloud-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wordcloud-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "0.24.5"
pix = "0.13.2"
rand = "0.8.5"
font-kit = "0.11.0"
pathfinder_geometry = "0.5.1"
pathfinder_text = "0.5.0"

[dependencies.diagnostic-quick]
version = "0.2.4"
features = ["font-kit"]

[dev-dependencies]

[features]
default = []
web = []
gpu = []
