[package]
name = "wordcloud"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Versatile word cloud generator"
repository = "https://github.com/oovm/wordcloud"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.24.6"
rand = "0.8.5"
kdtree = "0.7.0"
#color-core = "0.1.2"


[dev-dependencies]

[features]
default = []
web = []
gpu = []