[package]
name = "wordcloud"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Versatile word cloud generator"
repository = "https://github.com/oovm/wordcloud"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.24.6"
rand = "0.8.5"
bvh-arena = "1.1.3"
glam = "0.23.0"
fontdue = "0.7.3"


[dev-dependencies]

[features]
default = []
web = []
gpu = []