[package]
name = "wordcloud"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Versatile word cloud generator"
repository = "https://github.com/oovm/wordcloud"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
shape-core = "0.1.12"
regex = "1.7.3"
ab_glyph = "0.2.20"
image = "0.24.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"


[dev-dependencies]

[features]
default = []
web = []
gpu = []