[package]
name = "qr-image-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
#ncollide2d = "0.33.0"
#nalgebra = "0.32.2"

image = "0.24.6"
qrcode-generator = "4.0"

[dev-dependencies]

[features]
default = []
